# mergebot

./: .env.example  .gitignore  Cargo.toml  Makefile.toml  README.md  deployables.example.json
.github/workflows/: bump.yml  deploy.yml
.utils/: html-root-updater.js
src/: deployable.rs  job.rs  lib.rs  main.rs  mutex_extra.rs  result_extra.rs
src/deploy/: app.rs  mod.rs
src/extra/: mod.rs  str.rs
src/git/: mod.rs
src/git/impl/: client.rs  mod.rs  repo_context.rs
src/job/: approval.rs  event.rs  exec.rs  hooks.rs  messaging.rs  mod.rs  queue.rs  store.rs
src/job/exec/: impl.rs
src/job/store/: impl.rs  mod.rs
src/slack/: access.rs  event.rs  groups.rs  mod.rs  msg.rs  tokens.rs
tests/: git.rs  slack.rs
