[package]
name = "mergebot"
version = "0.0.0"
description = ""

edition = "2018"
authors = ["Orion Kindel <cakekindel@gmail.com>"]
license = "MIT OR Apache-2.0"

homepage = "https://github.com/cakekindel/mergebot"
repository = "https://github.com/cakekindel/mergebot"
readme = "README.md"

keywords = []
categories = []

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
