[package]
name = "mergebot"
version = "0.0.0"
description = ""

edition = "2018"
authors = ["Orion Kindel <cakekindel@gmail.com>"]
license = "MIT OR Apache-2.0"

homepage = "https://github.com/cakekindel/mergebot"
repository = "https://github.com/cakekindel/mergebot"
readme = "README.md"

keywords = []
categories = []

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
tokio = {version = "1", features = ["full"]}
warp = "0.3"
pretty_env_logger = "0.4"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
log = "0.4"
nanoid = "0.4"
lazy_static = "1.4"
