[package]
name = "mergebot"
version = "0.0.0"
description = ""

edition = "2018"
authors = ["Orion Kindel <cakekindel@gmail.com>"]
license = "MIT OR Apache-2.0"

homepage = "https://github.com/cakekindel/mergebot"
repository = "https://github.com/cakekindel/mergebot"
readme = "README.md"

keywords = []
categories = []

[lib]
name = "mergebot"
path = "src/lib.rs"

[[bin]]
name = "mergebot_bin"
path = "src/main.rs"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
base64 = "0.13"
tokio = {version = "1", features = ["full"]}
warp = "0.3"
pretty_env_logger = "0.4"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_urlencoded = "0.7"
log = "0.4"
nanoid = "0.4"
lazy_static = "1.4"
slack-blocks = {version = "0.25", features = ["blox"]}
reqwest = {version = "0.11", features = ["blocking", "json"]}
dotenv = "0.15"
sha2 = "0.9"
hmac = "0.11"
http = "0.2"
bytes = "1.1"
hex = "0.4"
chrono = {version = "0.4", features = ["serde"]}

[dev-dependencies]
simple_logger = "1.13"
mockito = "0.30"
